# Design-and-technology-databases

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
project8sem/: README.md
project8sem/core/: README.md  models.py  tests.py  urls.py  views.py
project8sem/core/migrations/: 0001_initial.py
project8sem/core/templates/core/: base.html  employees.html  login.html  register.html
project8sem/project8sem/: asgi.py  settings.py  urls.py  wsgi.py
